[MOD] modified DeckImpl fixing spotbugs