@@ -1,50 +1,62 @@
 package it.unibo.model.deck.impl;
 
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.LinkedList;
+import java.util.List;
 
 import it.unibo.model.deck.api.Deck;
-import it.unibo.model.objective.api.Objective;
-import it.unibo.model.objective.impl.ObjectiveFactoryImpl;
-
+/**
+ * Represents a generic deck of cards.
+ *
+ * @param <T> the type of cards in the deck.
+ */
 public class DeckImpl<T> implements Deck<T> {
 
-    private LinkedList<T> deck = new LinkedList<>();
-
+    private final List<T> deck = new ArrayList<>();
+    /**
+     * Creates a deck of cards.
+     *
+     * @param cards the cards to be added to the deck
+     */
+    public DeckImpl(final Collection<T> cards) {
+        this.deck.addAll(cards);
+    }
+    /**
+     * Adds a card to the deck.
+     *
+     * @param card the card to be added
+     */
     @Override
     public void addCard(final T card) {
         this.deck.add(card);
     }
-
+    /**
+     * Draws a card from the deck.
+     *
+     * @return the card drawn
+     */
     @Override
     public T drawCard() {
-        return this.deck.removeFirst();
+        if (deck.isEmpty()) {
+            throw new IllegalStateException("The deck is empty");
+        }
+        return this.deck.remove(0);
     }
-
+    /**
+     * Shuffles the deck.
+     */
     @Override
     public void shuffle() {
         Collections.shuffle(this.deck);
     }
-
+    /**
+     * Gets the deck.
+     *
+     * @return the deck
+     */
     @Override
-    public LinkedList<T> getDeck() {
-        return deck;
-    }
-
-    @Override
-    public String toString() {
-        return this.deck.toString();
-    }
-    
-    public static void main(String[] args) {
-        ObjectiveFactoryImpl ofi = new ObjectiveFactoryImpl();
-        Deck<Objective> deck = new DeckImpl<>();
-        ofi.createObjectiveSet();
-        for (Objective t : ofi.getSetObjectives()) {
-            deck.addCard(t);
-        }
-        deck.shuffle();
-        Objective drawnObjective = deck.drawCard();
-        System.out.println(drawnObjective);
+    public List<T> getDeck() {
+        return Collections.unmodifiableList(this.deck);
     }
 }
